--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -26,3 +26,11 @@ Instrucciones:
 5. Cortar el sándwich en dos mitades si lo deseas.
 6. Servir y disfrutar.
 
+## Clasificacion de Algoritmos
+
+Algoritmos Cualitativos: Son todos Aquellos algoritmos en los que los pasos que lo componen se describen de una forma narrada con lenguaje natural.
+Un Algoritmo es una secuencia de pasos ordenados logicos que se llevan a cabo con el objeto de resolver un problema determinado. Un ejemplo de ello
+es la receta anterior mencionada.
+
+Algoritmos Cuantitativos: 
+
