--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -1,4 +1,4 @@
-### Algoritmos:
+## Algoritmos:
 
 El vocablo algoritmo es de origen árabe y proviene del sobrenombre del matemático Al-Khowarizmi. Cuando escuchan la palabra algoritmo,
 las personas frecuentemente consideran que es demasiado sofisticada y exclusivamente relacionada con las ciencias. Sin embargo,
@@ -28,9 +28,9 @@ Instrucciones:
 
 ## Clasificacion de Algoritmos
 
-Algoritmos Cualitativos: Son todos Aquellos algoritmos en los que los pasos que lo componen se describen de una forma narrada con lenguaje natural.
+Algoritmos Cualitativos: Son todos aquellos algoritmos en los que los pasos que lo componen se describen de una forma narrada con lenguaje natural.
 Un Algoritmo es una secuencia de pasos ordenados logicos que se llevan a cabo con el objeto de resolver un problema determinado. Un ejemplo de ello
 es la receta anterior mencionada.
 
-Algoritmos Cuantitativos: 
+Algoritmos Cuantitativos: Son aquellos algoritmos que utilizan operaciones algebraicas y calculos numericos especificos para definir un proceso obteniendo valores concretos. Por ejemplo el resultado de una operacion matematica.
 
