--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -34,3 +34,13 @@ es la receta anterior mencionada.
 
 Algoritmos Cuantitativos: Son aquellos algoritmos que utilizan operaciones algebraicas y calculos numericos especificos para definir un proceso obteniendo valores concretos. Por ejemplo el resultado de una operacion matematica.
 
+## Estructura de un Algoritmo
+
+Todo algoritmo consta de tres secciones principales:
+
+Entrada: Es la introducción de datos para ser transformados.
+
+Proceso: Es el conjunto de operaciones a realizar para dar
+solución al problema.
+
+Salida: Son los resultados obtenidos a través del proceso.
