--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -44,3 +44,9 @@ Proceso: Es el conjunto de operaciones a realizar para dar
 solución al problema.
 
 Salida: Son los resultados obtenidos a través del proceso.
+                
+```mermaid
+graph TD;
+    Entrada-->Proceso-->Salida;
+
+```
