--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -50,3 +50,25 @@ graph TD;
     Entrada-->Proceso-->Salida;
 
 ```
+Tomando como ejemplo la receta del Sandwich:
+
+Entrada:
+
+ + Pan de molde
+ + Jamón cocido
+ + Queso en lonchas
+ + Mantequilla o margarina
+ 
+Proceso:
+
+ + Tostar el pan de molde en una tostadora o en una sartén caliente.
+ + Untar mantequilla o margarina en una de las rebanadas de pan tostado.
+ + Colocar una loncha de queso y una de jamón encima de la rebanada de pan con la mantequilla o margarina.
+ + Cubrir con la otra rebanada de pan tostado.
+ + Cortar el sándwich en dos mitades si lo deseas.
+
+Resultado:
+
+ + Un delicioso sándwich de jamón y queso.
+
+
