--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -38,12 +38,12 @@ Algoritmos Cuantitativos: Son aquellos algoritmos que utilizan operaciones algeb
 
 Todo algoritmo consta de tres secciones principales:
 
-Entrada: Es la introducción de datos para ser transformados.
+**Entrada o inicio**: Es la introducción de datos para ser transformados.
 
-Proceso: Es el conjunto de operaciones a realizar para dar
+**Procesos o acciones**: Es el conjunto de operaciones a realizar para dar
 solución al problema.
 
-Salida: Son los resultados obtenidos a través del proceso.
+**Salida o resultados**: Son los resultados obtenidos a través del proceso.
                 
 ```mermaid
 graph TD;
