--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -3,7 +3,7 @@
 El vocablo algoritmo es de origen árabe y proviene del sobrenombre del matemático Al-Khowarizmi. Cuando escuchan la palabra algoritmo,
 las personas frecuentemente consideran que es demasiado sofisticada y exclusivamente relacionada con las ciencias. Sin embargo,
 los algoritmos están ampliamente relacionados con nuestra vida cotidiana y con nuestro quehacer profesional. Un 
-algoritmo es una serie de pasos ordenados que se siguen para resolver un problema de forma detallada y finita.
+algoritmo es una serie de pasos ordenados que se siguen para resolver un problema de forma **detallada, definida, precisa y finita**.
 En la vida cotidiana se emplean algoritmos ampliamente, por ejemplo, en las
 recetas para preparar platillos.
 
@@ -32,7 +32,13 @@ Algoritmos Cualitativos: Son todos aquellos algoritmos en los que los pasos que 
 Un Algoritmo es una secuencia de pasos ordenados logicos que se llevan a cabo con el objeto de resolver un problema determinado. Un ejemplo de ello
 es la receta anterior mencionada.
 
-Algoritmos Cuantitativos: Son aquellos algoritmos que utilizan operaciones algebraicas y calculos numericos especificos para definir un proceso obteniendo valores concretos. Por ejemplo el resultado de una operacion matematica.
+Algoritmos Cuantitativos: Son aquellos algoritmos que utilizan operaciones algebraicas y calculos numericos especificos para definir un proceso obteniendo valores concretos. Por ejemplo:
+
+ 1. Solicitar al usuario que ingrese su fecha de nacimiento en el formato "dd/mm/aaaa".
+ 2. Obtener la fecha actual del sistema.
+ 3. Calcular la diferencia entre la fecha actual y la fecha de nacimiento.
+ 4. Convertir la diferencia de fechas a años completos.
+ 5. Mostrar el resultado de la edad calculada en años completos.
 
 ## Estructura de un Algoritmo
 
