--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -1,4 +1,4 @@
-## Algoritmos:
+## ✅ Algoritmos:
 
 El vocablo algoritmo es de origen árabe y proviene del sobrenombre del matemático Al-Khowarizmi. Cuando escuchan la palabra algoritmo,
 las personas frecuentemente consideran que es demasiado sofisticada y exclusivamente relacionada con las ciencias. Sin embargo,
@@ -77,4 +77,6 @@ Resultado:
 
 + ✔ Un delicioso sándwich de jamón y queso.
 
+## 🌐 Enlaces Complementarios
 
+🎥 [Qué es un Algoritmo?(2:32mins)](https://www.youtube.com/watch?v=EkObhToiseo&ab_channel=GCFAprendeLibre)
