--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -34,11 +34,11 @@ es la receta anterior mencionada.
 
 ➕➖ Algoritmos Cuantitativos: Son aquellos algoritmos que utilizan operaciones algebraicas y calculos numericos especificos para definir un proceso obteniendo valores concretos. Por ejemplo:
 
- 1. Solicitar al usuario que ingrese su fecha de nacimiento en el formato "dd/mm/aaaa".
- 2. Obtener la fecha actual del sistema.
- 3. Calcular la diferencia entre la fecha actual y la fecha de nacimiento.
- 4. Convertir la diferencia de fechas a años completos.
- 5. Mostrar el resultado de la edad calculada en años completos.
++ 1️⃣ Solicitar al usuario que ingrese su fecha de nacimiento en el formato "dd/mm/aaaa".
++ 2️⃣ Obtener la fecha actual del sistema.
++ 3️⃣ Calcular la diferencia entre la fecha actual y la fecha de nacimiento.
++ 4️⃣ Convertir la diferencia de fechas a años completos.
++ 5️⃣ Mostrar el resultado de la edad calculada en años completos.
 
 ## ❗ Estructura de un Algoritmo
 
