--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -75,7 +75,7 @@ Proceso:
 
 Resultado:
 
-+ ✔ Un delicioso sándwich de jamón y queso.
++ 🥪 Un delicioso sándwich de jamón y queso.
 
 ## 🌐 Enlaces Complementarios
 
