--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -79,8 +79,8 @@ Resultado:
 
 ## 🌐 Enlaces Complementarios
 
- + 🎥 [¿Qué es un Algoritmo?(2:32mins)](https://www.youtube.com/watch?v=EkObhToiseo&ab_channel=GCFAprendeLibre)
+ + 🎥 [¿Qué es un Algoritmo?(2:32min.)](https://www.youtube.com/watch?v=EkObhToiseo&ab_channel=GCFAprendeLibre)
  + 📄 [¿Qué es un Algoritmo?(-5min. de lectura)](https://concepto.de/algoritmo-en-informatica/)
 
 
-😁
+😁 by Izzy
