--- a/1. Algoritmos.md
+++ b/1. Algoritmos.md
@@ -83,4 +83,4 @@ Resultado:
  + 📄 [¿Qué es un Algoritmo?(-5min. de lectura)](https://concepto.de/algoritmo-en-informatica/)
 
 
-😁 by Izzy
+😁 by Izzy.
