--- a/2. Operadores.md
+++ b/2. Operadores.md
@@ -1,13 +1,13 @@
-### Operadores
+### ✅ Operadores
 
-#### Operadores Aritmeticos
+#### ❗ Operadores Aritmeticos
 
 Los **operadores aritméticos** son los que te permiten realizar operaciones matemáticas
-como suma, resta, multiplicación, división, potencias, entre otras, y se utilizan en algoritmos
-cuantitativos para encontrar la solución a un problema.
+como suma, resta, multiplicación, división, potencias, entre otras, y se utilizan en **algoritmos
+cuantitativos** para encontrar la solución a un problema.
 
-Al momento de realizar estas operaciones es frecuente agruparlas en uno o más paréntesis
-para facilitar su cálculo. Además, por medio de este símbolo se indica que las operaciones
+Al momento de realizar estas operaciones es **frecuente agruparlas en uno o más paréntesis
+para facilitar su cálculo**. Además, por medio de este símbolo se indica que las operaciones
 deben realizarse de izquierda a derecha y respetando la prioridad de ejecución de los
 operadores que es la siguiente: primero se realiza el cálculo de potencias, después la
 multiplicación y división, luego se obtiene el módulo o residuo de una división, y por último
@@ -15,8 +15,76 @@ se calcula la suma y resta.
 
 Nivel Jerarquico  | Operador
 ------------- | -------------
- 0  | **()** parentesis
+ 0  | **()** parentesis o agrupación
  1  | **^** potencias
  2  | **\*** Multiplicacion **/** Division
  3  | **mod** Modulo o reciduo
  4  | **+** Suma **-** Resta
+
+Cuando existen signos de agrupación contiguos, se traduce como el producto de ambas agrupaciones.
+
+Por ejemplo:
+
+> (20 - 5 x 3) (9 - 2 x 4)
+> (20-15) (9 - 8)
+> (5) (1)
+> **5**
+
+Segundo.
+
+Cuando un número precede a un signo de agrupación, significa que ese número multiplica al contenido de la agrupación.
+
+Por ejemplo:
+
+> 3.5 (2 + 3 x 3)
+> 3.5 (2 + 9)
+> 3.5 (11)
+> **38.5**
+
+Tercero.
+
+Por lo general, es conveniente comenzar resolviendo las operaciones que se encuentren contenidas dentro de paréntesis. Estas operaciones suelen estar en la parte central de la misma. Enseguida, las operaciones entre corchetes y, finalmente, las que están contenidas entre llaves.
+
+Por ejemplo:
+
+> 2 {(16 – 4 x 2 ) + [ 3 – (4 ÷ 2 – 1) ] + 4 (2 + 3 x 2)}
+> 2{(16 – 8) + [3 - ( 2 – 1) ] + 4 (2 + 6)}
+> 2{8 + [ 3 - ( 1) ] + 4 (8)}
+> 2{8 + [ 3 – 1] + 32}
+> 2{8 + 2 + 32}
+> 2{42}
+> **84**
+
+No Olvidemos que la representación de multiples parentesis en una operacion pueden representarse de 2 formas:
+
+ + 1️⃣ : {[(a)b]c}
+ + 2️⃣ : (((a)b)c)
+
+## ❗ Operador (mod ó %)
+
+Como podemos observar en la posicion 3 de la jerarquia tenemos un operador de residuo(mod ó %). Este operador se refiere a que como resultado será el residuo de la division entre 2 numeros, por ejemplo:
+
+> 27 mod 4
+
+Aqui aplicamos una division de `27/4`. Debemos hacer la division pero sin usar decimales, es decir, multiplicamos por 4 pero sin sobrepasar 27, esto es, `4*6= 24`. Como podemos observar, la multiplicaion de 4x6 no sobrepasa a 27 y por lo tanto el resultado de `27 mod 4` seria `3` debido a que sobran 3 de la division.
+
+Si quisieramos hacer esto en la calculadora, simplemente multiplicamos el valor decimal por el segundo numero de la operacion, ejemplo:
+
+>27 mod 4
+>27/4
+>6.75
+
+Aqui tomamos el valor decimal y lo multimplicamos por el segundo operador: 0.75 x 4
+
+>0.75x4
+>**3**
+
+Ejemplo de operacion con el operador de residuo(mod ó %):
+
+>(3 ^ 2 + 10 / 2) + (3 * 9 mod 4 - 1) 
+>(9 + 5) + (27 mod 4 - 1)
+>(9 + 5) + (3 - 1)
+>(14) + (2)
+>**16**
+
+
