--- a/2. Operadores.md
+++ b/2. Operadores.md
@@ -25,10 +25,10 @@ Cuando existen signos de agrupación contiguos, se traduce como el producto de a
 
 Por ejemplo:
 
-> (20 - 5 x 3) (9 - 2 x 4)
-> (20-15) (9 - 8)
-> (5) (1)
-> **5**
+> + (20 - 5 x 3) (9 - 2 x 4)
+> + (20-15) (9 - 8)
+> + (5) (1)
+> + **5**
 
 Segundo.
 
@@ -36,10 +36,10 @@ Cuando un número precede a un signo de agrupación, significa que ese número m
 
 Por ejemplo:
 
-> 3.5 (2 + 3 x 3)
-> 3.5 (2 + 9)
-> 3.5 (11)
-> **38.5**
+> + 3.5 (2 + 3 x 3)
+> + 3.5 (2 + 9)
+> + 3.5 (11)
+> + **38.5**
 
 Tercero.
 
@@ -47,13 +47,13 @@ Por lo general, es conveniente comenzar resolviendo las operaciones que se encue
 
 Por ejemplo:
 
-> 2 {(16 – 4 x 2 ) + [ 3 – (4 ÷ 2 – 1) ] + 4 (2 + 3 x 2)}
-> 2{(16 – 8) + [3 - ( 2 – 1) ] + 4 (2 + 6)}
-> 2{8 + [ 3 - ( 1) ] + 4 (8)}
-> 2{8 + [ 3 – 1] + 32}
-> 2{8 + 2 + 32}
-> 2{42}
-> **84**
+> + 2 {(16 – 4 x 2 ) + [ 3 – (4 ÷ 2 – 1) ] + 4 (2 + 3 x 2)}
+> + 2{(16 – 8) + [3 - ( 2 – 1) ] + 4 (2 + 6)}
+> + 2{8 + [ 3 - ( 1) ] + 4 (8)}
+> + 2{8 + [ 3 – 1] + 32}
+> + 2{8 + 2 + 32}
+> + 2{42}
+> + **84**
 
 No Olvidemos que la representación de multiples parentesis en una operacion pueden representarse de 2 formas:
 
@@ -70,21 +70,21 @@ Aqui aplicamos una division de `27/4`. Debemos hacer la division pero sin usar d
 
 Si quisieramos hacer esto en la calculadora, simplemente multiplicamos el valor decimal por el segundo numero de la operacion, ejemplo:
 
->27 mod 4
->27/4
->6.75
+> + 27 mod 4
+> + 27/4
+> + 6.75
 
 Aqui tomamos el valor decimal y lo multimplicamos por el segundo operador: 0.75 x 4
 
->0.75x4
->**3**
+> + 0.75x4
+> + **3**
 
 Ejemplo de operacion con el operador de residuo(mod ó %):
 
->(3 ^ 2 + 10 / 2) + (3 * 9 mod 4 - 1) 
->(9 + 5) + (27 mod 4 - 1)
->(9 + 5) + (3 - 1)
->(14) + (2)
->**16**
+> + (3 ^ 2 + 10 / 2) + (3 * 9 mod 4 - 1) 
+> + (9 + 5) + (27 mod 4 - 1)
+> + (9 + 5) + (3 - 1)
+> + (14) + (2)
+> + **16**
 
 
