--- a/2. Operadores.md
+++ b/2. Operadores.md
@@ -1,6 +1,6 @@
-### ✅ Operadores
+## ✅ Operadores
 
-#### ❗ Operadores Aritmeticos
+### ❗ Operadores Aritmeticos
 
 Los **operadores aritméticos** son los que te permiten realizar operaciones matemáticas
 como suma, resta, multiplicación, división, potencias, entre otras, y se utilizan en **algoritmos
@@ -60,7 +60,7 @@ No Olvidemos que la representación de multiples parentesis en una operacion pue
  + 1️⃣ : {[(a)b]c}
  + 2️⃣ : (((a)b)c)
 
-## ❗ Operador (mod ó %)
+### ❗ Operador (mod ó %)
 
 Como podemos observar en la posicion 3 de la jerarquia tenemos un operador de residuo(mod ó %). Este operador se refiere a que como resultado será el residuo de la division entre 2 numeros, por ejemplo:
 
@@ -87,4 +87,11 @@ Ejemplo de operacion con el operador de residuo(mod ó %):
 > + (14) + (2)
 > + **16**
 
+### ❗ Operadores Relacionales ó condicionales
 
+Los operadores relacionales son símbolos que se usan para comparar dos valores. Si el resultado de la comparación es correcto la expresión considerada es verdadera, en caso contrario es falsa.
+
+
+| Operadoro  | Nombre | Ejemplo | Significado |
+|:-------------:|:-------------:| -----:|-----:|
+| < | menor que | a<b | a es menor que b |
