--- a/2. Operadores.md
+++ b/2. Operadores.md
@@ -92,6 +92,6 @@ Ejemplo de operacion con el operador de residuo(mod ó %):
 Los operadores relacionales son símbolos que se usan para comparar dos valores. Si el resultado de la comparación es correcto la expresión considerada es verdadera, en caso contrario es falsa.
 
 
-| Operadoro  | Nombre | Ejemplo | Significado |
-|:-------------:|:-------------:| -----:|-----:|
+| Operador  | Nombre | Ejemplo | Significado |
+|:-------------:|:-------------:|:-----:|:-----:|
 | < | menor que | a<b | a es menor que b |
