--- a/2. Operadores.md
+++ b/2. Operadores.md
@@ -113,10 +113,46 @@ Ejemplos:
 Los operadores lógicos se utilizan para evaluar dos o más expresiones que utilizan operadores relacionales para determinar si la expresión en general es verdadera o falsa. Los operadores lógicos son: conjunción o `AND` que se representa con un doble ampersand `(&&)` y disyunción u `OR` que se representa con dos barras `(||)` verticales. El operador AND determina el valor booleano de cada expresión, es decir, si ambas son verdaderas el resultado general de la expresión también lo es, sin embargo, si una de ellas es falsa el valor final también lo será. El operador OR evalúa cada expresión, si uno de los términos es verdadero en automático el valor general de la expresión también lo es. La única forma en 
 que la expresión pueda ser tomada como falsa es cuando el valor bolea no de ambos elementos también es falso. El operador negación o `NOT` que se representa con el símbolo `¬` , cambia el valor final de una expresión por su contrario, es decir, si tras evaluar una expresión en general se determina que es verdadera y se le aplica el operador NOT, entonces el resultado final será falso. Los operadores lógicos junto a los relacionales y aritméticos son utilizados para validar expresiones complejas en los programas y aplicaciones que usas diariamente. Un ejemplo de ello es la verificación de su identidad para acceder a tu mail.
 
-| Nombre    | Representacion   | Cool  |
-| ------------- |:-------------:| -----:|
-| Conjunción *AND* | **&&** | $1600 |
-| Disyunción *OR* | **||** |   $12 |
-| Negación | **! , ¬ , ~** |    $1 |
+| Nombre    | Representacion   | Significado  |
+|:------------- |:-------------:|:----- |
+| Conjunción *AND* | **&&** | El resultado es verdadero si ambas expresiones son verdadera |
+| Disyunción *OR* | **\|\|** | El resultado es verdadero si alguna expresión es verdadera |
+| Negación *NOT* | **!** , **¬** , **~** | El resultado invierte la condición de la expresión |
+
+Ejemplo de cada situacion:
+
+> + 1 = ✔Verdadero
+> + 0 = ❌Falso
+
+El operador lógico AND, &&
+
+| x |	y |	Resultado |
+|:-------------:|:-------------:|:-------------:|
+| 1 |	1 |	1 |
+| 1 |	0 |	0 |
+| 0	| 1 |	0 |
+| 0	| 0 |	0 |
+
+El operador lógico OR, ||
+
+| x |	y |	Resultado |
+|:-------------:|:-------------:|:-------------:|
+| 1 |	1 |	1 |
+| 1 |	0	| 1 |
+| 0 |	1 |	1 |
+| 0 |	0 |	0 |
+
+El operador lógico NOT, ~ ! ¬
+
+| x |	Resultado |
+|:-------------:|:-------------:|
+|1 |	0 |
+|0 |	1 |
+
+#### Mas ejemplos:
+
+> + (2==2) && (3==-1) FALSO
+> + 12 > 12 OR 12 <= 23 VERDADERO
+> + ¬(a==a) FALSO
 
 
