Update 3.Conceptos Básicos de Programación.md

--- a/3.Conceptos Básicos de Programación.md
+++ b/3.Conceptos Básicos de Programación.md
@@ -27,3 +27,45 @@ s = "Hola Mundo!"
 print s
 ```
 
+### ❗ Programa
+
+Un programa es un bloque de instrucciones (código fuente) escritas en cierto lenguaje de programación cuyo propósito es resolver un problema.
+
+Ejemplo:
+
+Programa en Java que sume 12 y 15 y muestre el resultado por pantalla:
+
+```java
+public class Suma {
+  public static void main(String[] args) {
+    int a = 12;
+    int b = 15;
+    int resultado = a + b;
+    System.out.println("La suma de " + a + " y " + b + " es igual a " + resultado);
+  }
+}
+```
+
+Resultado:
+```css
+La suma de 12 y 15 es igual a 27
+```
+
+### ❗ Ejecucion de un programa
+
+Para ejecutar un programa la computadora realiza una traducción de sus componentes al lenguaje máquina, es decir, convierte las instrucciones en cadenas de ceros y unos. Este proceso de conversión puede hacerse de dos formas:
+
+ + 🅰) Intérprete: Un programa que se ejecuta instrucción por instrucción en tiempo real.
+ + 🅱) Compilado: Para ejecutarse necesita ser compilado, es decir, que toma al bloque de instrucciones lo traduce sólo una vez y lo ejecuta.
+
+#### Interprete 
+```mermaid
+graph LR;
+    Programa_fuente-->Interprete-->Traduccion_y_ejecucion;
+```
+
+#### Compilador
+```mermaid
+graph LR;
+    Programa_fuente-->Compilador-->Ejecutable;
+```
