Update 3.Conceptos Básicos de Programación.md

--- a/3.Conceptos Básicos de Programación.md
+++ b/3.Conceptos Básicos de Programación.md
@@ -69,3 +69,11 @@ graph LR;
 graph LR;
     Programa_fuente-->Compilador-->Ejecutable;
 ```
+
+Ejemplos de lenguajes compilados y de interprete:
+
+| Compilado | Interpretado  |
+|:-------------:|:-------------:|
+| COBOL      | Php |
+| C++      | Javascript  |
+| Visual Basic | Python   |
