--- a/3.Conceptos Básicos de Programación.md
+++ b/3.Conceptos Básicos de Programación.md
@@ -77,3 +77,11 @@ Ejemplos de lenguajes compilados y de interprete:
 | COBOL      | Php |
 | C++      | Javascript  |
 | Visual Basic | Python   |
+
+## 🌐 Enlaces Complementarios
+
+ + 🎥 [¿Qué son los lenguajes de programación?(2:19min.)](https://www.youtube.com/watch?v=pWw4UtQhdek&ab_channel=GCFAprendeLibre)
+ + 📄 [lenguaje Compilado e Interpretado(-10min. de lectura)](https://itm201511.webnode.es/archivos-del-sistema/lenguajes/lenguaje-compilado-e-interpretado/)
+
+
+😁 by Izzy.
