Update 4. Tipos de Datos.md

--- a/4. Tipos de Datos.md
+++ b/4. Tipos de Datos.md
@@ -28,3 +28,16 @@ El dato de `tipo cadena o string`, es un tipo de dato compuesto debido a que con
 lenguaje de programación, por espacios en blanco y por una comilla (‘) o doble comillas (“).
 
 Los datos de `tipo lógicos o Booleanos` (falso, verdadero) están formados por dos valores que son falso (false) y verdadero (true).
+
+#### Tabla resumida con los tipos de datos mas comunes:
+
+| Tipo de dato        | Descripción       |
+|:------------- |:------------- |
+| Entero (int)      | Un número entero, sin parte fraccionaria, que puede ser positivo o negativo. Ejemplos: -3, 0, 42 |
+| Flotante (float)    | Un número con parte fraccionaria, que puede ser positivo o negativo. Ejemplos: 3.14, -2.5   |
+| Carácter (char) | Un solo carácter alfanumérico o un símbolo, como una letra, número o signo de puntuación. Ejemplos: 'a', '7', '.'   |
+| Cadena de caracteres (string) | Una secuencia de caracteres, como una palabra o una frase. Ejemplo: "Hola mundo" |
+| Booleano (bool) | Un valor que es verdadero o falso. Ejemplos: True, False |
+
+
+😁 by Izzy.
