--- a/4. Tipos de Datos.md
+++ b/4. Tipos de Datos.md
@@ -40,4 +40,43 @@ Los datos de `tipo lógicos o Booleanos` (falso, verdadero) están formados por 
 | Booleano (bool) | Un valor que es verdadero o falso. Ejemplos: True, False |
 
 
+#### Representacion de los tipos de datos en lenguaje Java 🧡:
+
+```java
+public class EjemploTiposDatos {
+    public static void main(String[] args) {
+        // Entero (int)
+        int edad = 27;
+        System.out.println("Edad: " + edad);
+
+        // Flotante (float)
+        float precio = 3.99f;
+        System.out.println("Precio: " + precio);
+
+        // Carácter (char)
+        char inicial = 'J';
+        System.out.println("Inicial: " + inicial);
+
+        // Cadena de caracteres (String)
+        String nombre = "Juan";
+        System.out.println("Nombre: " + nombre);
+
+        // Booleano (boolean)
+        boolean activo = true;
+        System.out.println("Activo: " + activo);
+    }
+}
+
+```
+
+Este código define las siguientes variables:
+
+ + **edad** de tipo int con un valor de *27*.
+ + **precio** de tipo float con un valor de *3.99f*.
+ + **inicial** de tipo char con un valor de *'J'*.
+ + **nombre** de tipo String con un valor de *"Juan"*.
+ + **activo** de tipo boolean con un valor de *true*.
+
+Cada variable se imprime en la consola utilizando el método *System.out.println()*.
+
 😁 by Izzy.
