--- a/5. Variables.md
+++ b/5. Variables.md
@@ -12,7 +12,7 @@ Tenemos 2 tipos de Variables:
  + 1. Globales: Se escriben al comienzo de un programa.
  + 2. Locales: Se declaran dentro de un bloque de instrucciones del programa
 
-### Ejemplos de Variables:
+### #️⃣ Ejemplos de Variables:
 
 
 
@@ -23,3 +23,28 @@ float decimal = 2.4f; // variable flotante
 boolean flag = true; // variable boleana o logica
 char letra = 'a'; // variable tipo caracter/letra
 ```
+
+### 🆎 Como nombrar una variable de forma correcta
+
+#### ✔ Formas Validas:
+
+> int numero = 256;
+> int numero4 = 256;
+> int x1 = 256; 
+> int numero_variable = 256;
+
+#### ❌ Formas No Validas:
+
+> int 1numero = 256;
+> int numero-uno = 256;
+> int 1 = 256; 
+> int -numero = 256;
+
+### #️⃣ Clasificación de Variables:
+
+a) Numérica
+b) Lógica
+c) Contador
+d) Acumulador
+e) Alfanumérica
+
