--- a/5. Variables.md
+++ b/5. Variables.md
@@ -2,25 +2,42 @@
 
 ### ❗ Definición
 
-Se define a una variable como una porción de memoria, que posee un nombre,
+ **1.** Se define a una variable como una porción de memoria, que posee un nombre,
 que sirve para almacenar un valor de cierto tipo de dato, el cual cambia durante la ejecución del programa.
 
+ **2.** Una variable es la asignación de un tipo de dato a una palabra con el objetivo de almacenarla dentro de la memoria, además de gestionar la información que decidas incorporar en el código. Estas palabras claves se pueden expresar mediante números, textos, objetos o, incluso, datos abstractos.
+
+Los principales usos para las variables son:
+
+ + Guardar datos y estados.
+ + Asignar valores de una variable a otra.
+ + Representar valores dentro de una expresión matemática.
+ + Mostrar valores por pantalla.
+
+#### Para asignar un tipo de dato a una variable
 > **Tipo de Dato + Nombre de la Variable + Operador de Igualdad + Dato a almacenar**
 
-Tenemos 2 tipos de Variables:
-
- + 1. Globales: Se escriben al comienzo de un programa.
- + 2. Locales: Se declaran dentro de un bloque de instrucciones del programa
-
-### #️⃣ Ejemplos de Variables:
-
+### #️⃣ Ejemplos de Variables en programación:
 
 
 ```java
 int numero = 2; // variable tipo entero
+```
+ + **guarda números enteros y positivos.**
+
+```java
 String cadena = "Hola"; // variable tipo Cadena o String
+```
+
+```java
 float decimal = 2.4f; // variable flotante 
+```
+
+```java
 boolean flag = true; // variable boleana o logica
+```
+
+```java
 char letra = 'a'; // variable tipo caracter/letra
 ```
 
@@ -28,17 +45,24 @@ char letra = 'a'; // variable tipo caracter/letra
 
 #### ✔ Formas Validas:
 
-> int numero = 256;
-> int numero4 = 256;
-> int x1 = 256; 
+> int **numero** = 256;
+> 
+> int **numero4** = 256;
+> 
+> int **x1** = 256; 
+> 
 > int numero_variable = 256;
 
 #### ❌ Formas No Validas:
 
 > int 1numero = 256;
+> 
 > int numero-uno = 256;
+> 
 > int 1 = 256; 
+> 
 > int -numero = 256;
+> 
 
 ### #️⃣ Clasificación de Variables:
 
