--- a/5. Variables.md
+++ b/5. Variables.md
@@ -2,20 +2,33 @@
 
 ### ❗ Definición
 
- **1.** Se define a una variable como una porción de memoria, que posee un nombre,
+ **1️⃣.** Se define a una variable como una porción de memoria, que posee un nombre,
 que sirve para almacenar un valor de cierto tipo de dato, el cual cambia durante la ejecución del programa.
 
- **2.** Una variable es la asignación de un tipo de dato a una palabra con el objetivo de almacenarla dentro de la memoria, además de gestionar la información que decidas incorporar en el código. Estas palabras claves se pueden expresar mediante números, textos, objetos o, incluso, datos abstractos.
+ **2️⃣.** Una variable es la asignación de un tipo de dato a una palabra con el objetivo de almacenarla dentro de la memoria, además de gestionar la información que decidas incorporar en el código. Estas palabras claves se pueden expresar mediante números, textos, objetos o, incluso, datos abstractos.
 
 Los principales usos para las variables son:
 
- + Guardar datos y estados.
- + Asignar valores de una variable a otra.
- + Representar valores dentro de una expresión matemática.
- + Mostrar valores por pantalla.
+ + 📦 Guardar datos y estados.
+ + ✨ Asignar valores de una variable a otra.
+ + 0️⃣ Representar valores dentro de una expresión matemática.
+ + 🖥 Mostrar valores por pantalla.
 
-#### Para asignar un tipo de dato a una variable
+#### 🤔 Para asignar un tipo de dato a una variable, emplea la siguiente formula.
+
 > **Tipo de Dato + Nombre de la Variable + Operador de Igualdad + Dato a almacenar**
+
+```java
+int numero = 2; // variable tipo entero
+```
+
+ | Desglose      | Ejemplo    |
+ |:-------------|:---------:|
+ | Tipo de Dato| **int**|
+ | Nombre de la variable| **numero**|
+ | Operador de igualdar| **=**|
+ | Dato a almacenar| **2**|
+
 
 ### #️⃣ Ejemplos de Variables en programación:
 
@@ -23,23 +36,27 @@ Los principales usos para las variables son:
 ```java
 int numero = 2; // variable tipo entero
 ```
- + **guarda números enteros y positivos.**
+ + **Guarda números enteros y positivos.**
 
 ```java
-String cadena = "Hola"; // variable tipo Cadena o String
+String cadena = "Hola 0123"; // variable tipo Cadena o String
 ```
+ + **Almacena texto y números.**
 
 ```java
 float decimal = 2.4f; // variable flotante 
 ```
+ + **concentra muchos números en su definición.**
 
 ```java
 boolean flag = true; // variable boleana o logica
 ```
+ + **guarda caracteres con el significado de verdadero o falso**
 
 ```java
 char letra = 'a'; // variable tipo caracter/letra
 ```
+ + **almacena símbolos o caracteres.**
 
 ### 🆎 Como nombrar una variable de forma correcta
 
@@ -66,9 +83,46 @@ char letra = 'a'; // variable tipo caracter/letra
 
 ### #️⃣ Clasificación de Variables:
 
-a) Numérica
-b) Lógica
-c) Contador
-d) Acumulador
-e) Alfanumérica
+#### 0️⃣ Numérica
+ 
+ **Variables Numéricas**: Son aquellas en las cuales se almacenan valores numéricos, positivos o negativos, es decir almacenan números del 0 al 9, signos (+ y -) y el punto decimal.
+ 
+ Ejemplos: 
+ 
+ > long iva = 0.15 
+ > 
+ > float pi = 3.1416 
+ > 
+ > int costo = 2500
+
+#### ❌✔ Lógica
+
+**Variables Lógicas**: Son aquellas que solo pueden tener dos valores (cierto o falso) estos representan el resultado de una comparación entre otros datos.
+
+ Ejemplos: 
+ 
+ > boolean siEstaLloviendo = true 
+ > 
+ > boolean estaTriste = false 
+  
+#### ✌ Contador
+
+**Contadores**: Se utilizan para llevar el control del numero de ocasiones en que se realiza una operación o se cumple una condición. Con los incrementos generalmente de uno en uno.
+
+ Ejemplos: 
+ 
+ > contar = contar + 1  
+ > 
+ > contar++
+
+#### 🤢 Acumulador
+
+**Acumuladores**: Forma que toma una variable y que sirve para llevar la suma acumulativa de una serie de valores que se van leyendo o calculando progresivamente.
+
+ + **e)** Alfanumérica
+
+
+## 🌐 Enlaces Complementarios
+
+ + 📄 [Tipos de VAriables en programación(-8min. de lectura)](https://blog.ticjob.es/tipos-de-variables-en-programacion/)
 
