--- a/5. Variables.md
+++ b/5. Variables.md
@@ -119,10 +119,25 @@ char letra = 'a'; // variable tipo caracter/letra
 
 **Acumuladores**: Forma que toma una variable y que sirve para llevar la suma acumulativa de una serie de valores que se van leyendo o calculando progresivamente.
 
- + **e)** Alfanumérica
+ Ejemplo: 
+ 
+ > x = x + y  
+
+#### 🅰1️⃣ Alfanumérica
+
+**Variables Alfanuméricas**: Está formada por caracteres alfanuméricos (letras, números y caracteres especiales).
+
+ Ejemplos:
+ 
+ > letra = "a"
+ > 
+ > apellido = "lopez" 
+ > 
+ > direccion = "Av. Libertad #190"
 
 
 ## 🌐 Enlaces Complementarios
 
  + 📄 [Tipos de VAriables en programación(-8min. de lectura)](https://blog.ticjob.es/tipos-de-variables-en-programacion/)
+ + 📄 [Expresiones e instrucciones(-15min. de lectura)](https://desarrolloweb.com/articulos/expresiones-instruccion-programacion.html)
 
