--- a/5. Variables.md
+++ b/5. Variables.md
@@ -141,3 +141,4 @@ char letra = 'a'; // variable tipo caracter/letra
  + 📄 [Tipos de VAriables en programación(-8min. de lectura)](https://blog.ticjob.es/tipos-de-variables-en-programacion/)
  + 📄 [Expresiones e instrucciones(-15min. de lectura)](https://desarrolloweb.com/articulos/expresiones-instruccion-programacion.html)
 
+😁 by Izzy.
