--- a/5. Variables.md
+++ b/5. Variables.md
@@ -72,14 +72,16 @@ char letra = 'a'; // variable tipo caracter/letra
 
 #### ❌ Formas No Validas:
 
-> int 1numero = 256;
+> int **1numero** = 256;
 > 
-> int numero-uno = 256;
+> int **numero-uno** = 256;
 > 
-> int 1 = 256; 
+> int **1** = 256; 
 > 
-> int -numero = 256;
+> int **-numero** = 256;
 > 
+> int **int** = 256;
+
 
 ### #️⃣ Clasificación de Variables:
 
@@ -140,5 +142,6 @@ char letra = 'a'; // variable tipo caracter/letra
 
  + 📄 [Tipos de VAriables en programación(-8min. de lectura)](https://blog.ticjob.es/tipos-de-variables-en-programacion/)
  + 📄 [Expresiones e instrucciones(-15min. de lectura)](https://desarrolloweb.com/articulos/expresiones-instruccion-programacion.html)
+
 
 😁 by Izzy.
