--- a/5. Variables.md
+++ b/5. Variables.md
@@ -26,7 +26,7 @@ int numero = 2; // variable tipo entero
  |:-------------|:---------:|
  | Tipo de Dato| **int**|
  | Nombre de la variable| **numero**|
- | Operador de igualdar| **=**|
+ | Operador de igualdad| **=**|
  | Dato a almacenar| **2**|
 
 
