--- a/5. Variables.md
+++ b/5. Variables.md
@@ -115,7 +115,11 @@ char letra = 'a'; // variable tipo caracter/letra
  
  > contar = contar + 1  
  > 
+ > contar = contar * 1
+ > 
  > contar++
+ > 
+ > contar--
 
 #### 🤢 Acumulador
 
@@ -123,7 +127,9 @@ char letra = 'a'; // variable tipo caracter/letra
 
  Ejemplo: 
  
- > x = x + y  
+ > x = x + y
+ >   
+ > x = x - y
 
 #### 🅰1️⃣ Alfanumérica
 
