--- a/5. Variables.md
+++ b/5. Variables.md
@@ -115,7 +115,7 @@ char letra = 'a'; // variable tipo caracter/letra
  
  > contar = contar + 1  
  > 
- > contar = contar * 1
+ > contar = contar - 1
  > 
  > contar++
  > 
@@ -146,7 +146,7 @@ char letra = 'a'; // variable tipo caracter/letra
 
 ## 🌐 Enlaces Complementarios
 
- + 📄 [Tipos de VAriables en programación(-8min. de lectura)](https://blog.ticjob.es/tipos-de-variables-en-programacion/)
+ + 📄 [Tipos de Variables en programación(-8min. de lectura)](https://blog.ticjob.es/tipos-de-variables-en-programacion/)
  + 📄 [Expresiones e instrucciones(-15min. de lectura)](https://desarrolloweb.com/articulos/expresiones-instruccion-programacion.html)
 
 
