Update 6. Diagramas de Flujo.md

--- a/6. Diagramas de Flujo.md
+++ b/6. Diagramas de Flujo.md
@@ -53,3 +53,6 @@ Sus características fundamentales son:
  + No tienen líneas de flujo sin conectar.
  + El lenguaje es conciso y claro
  
+## Simbología
+
+![flujo](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/flujo.png?raw=true)
