Update 6. Diagramas de Flujo.md

--- a/6. Diagramas de Flujo.md
+++ b/6. Diagramas de Flujo.md
@@ -56,3 +56,5 @@ Sus características fundamentales son:
 ## Simbología
 
 ![flujo](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/flujo.png?raw=true)
+
+![Inicio y Fin](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/iniciofin.png?raw=true)
