Update 6. Diagramas de Flujo.md

--- a/6. Diagramas de Flujo.md
+++ b/6. Diagramas de Flujo.md
@@ -58,3 +58,24 @@ Sus características fundamentales son:
 ![flujo](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/flujo.png?raw=true)
 
 ![Inicio y Fin](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/iniciofin.png?raw=true)
+
+![Entrada y salida](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/entradasalida.png?raw=true)
+
+![Proceso](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/proceso.png?raw=true)
+
+![Escritura](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/escritura.png?raw=true)
+
+![Seleccion](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/seleccionsencilla.png?raw=true)
+
+![Seleccion Multiple](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/seleccionmultiple.png?raw=true)
+
+![Mientras](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/while.png?raw=true)
+
+![Iteracion](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/desdehasta.png?raw=true)
+
+![Repitemientras](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/repitemientras.png?raw=true)
+
+![Conector](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/conector.png?raw=true)
+
+![Conetor otra pag](https://github.com/IzzyGrant/EDC-Pensamiento-Compuatcional/blob/main/img/conectorotrapag.png?raw=true)
+
